trunk/Archive2/e5/c3a0a5eaca2af1/output
main.cpp:27:7: error: call to deleted constructor of 'B'
    B b( B{} );
      ^  ~~~
main.cpp:21:5: note: 'B' has been explicitly marked deleted here
    B(B && b) = delete;
    ^
1 error generated.
